# obsidian-markdown-to-anki

./: .gitignore  Dockerfile  package-lock.json  package.json  pyproject.toml
markdown_to_anki/: hello.py
